k8s/apps/midpoint/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: midpoint
  namespace: iam
spec:
  ingressClassName: nginx
  rules:
    - host: mp.132.220.29.66.nip.io
